force-app/main/default/objects/Order/fields/Inventory_Check_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Check_Requested_At__c</fullName>
    <description>Timestamp when the user clicked Request Inventory Check on this order.</description>
    <label>Inventory Check Requested At</label>
    <type>DateTime</type>
</CustomField>