force-app/main/default/objects/Order/fields/Inventory_Confirmed_At__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Confirmed_At__c</fullName>
    <description>Timestamp when warehouse approved or rejected the inventory check via Slack.</description>
    <label>Inventory Confirmed At</label>
    <type>DateTime</type>
</CustomField>