force-app/main/default/objects/Order/fields/Inventory_Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Confirmed_By__c</fullName>
    <description>Slack user (display name or username) who confirmed or rejected the inventory check.</description>
    <label>Inventory Confirmed By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>