force-app/main/default/objects/Order/fields/Inventory_Slack_Message_Ts__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Slack_Message_Ts__c</fullName>
    <description>Slack message timestamp (the "ts" field) of the inventory request, returned by chat.postMessage. Used by MuleSoft to update the Slack message in place after the warehouse user clicks a button.</description>
    <label>Inventory Slack Message Ts</label>
    <length>50</length>
    <type>Text</type>
</CustomField>