force-app/main/default/objects/Order/fields/Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Status__c</fullName>
    <description>Tracks the warehouse inventory check state for the order. Updated by the Slack-driven approval flow via MuleSoft callback.</description>
    <label>Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Checked</fullName>
                <default>true</default>
                <label>Not Checked</label>
            </value>
            <value>
                <fullName>Pending Check</fullName>
            </value>
            <value>
                <fullName>In Stock</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>