force-app/main/default/objects/Order/fields/JIRA_Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Ticket_Id__c</fullName>
    <description>JIRA ticket key created when this Order is marked Out of Stock by warehouse approval. Set by JiraTicketService.cls during InventoryApprovalDecisionService Reject path.</description>
    <externalId>true</externalId>
    <label>JIRA Ticket Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>