force-app/main/default/objects/Order/fields/SAP_Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SAP_Available_Quantity__c</fullName>
    <description>Last-known available quantity reported by SAP MM for this Order's primary product. Written by SapMaterialStockService at ATP check time. Null = SAP not yet queried for this Order; 0 = out of stock per SAP; positive = available units.</description>
    <label>SAP Available Quantity</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>