force-app/main/default/objects/Order/fields/SAP_Inventory_Checked_At__c.field-meta.xml
<CustomField>
    <fullName>SAP_Inventory_Checked_At__c</fullName>
    <description>Timestamp of the most recent SapMaterialStockService.checkOrderStock call for this Order. Used in dashboards to spot stale ATP data and in audit reports to correlate SF inventory decisions with SAP state at decision time.</description>
    <label>SAP Inventory Checked At</label>
    <type>DateTime</type>
</CustomField>