force-app/main/default/objects/Order/fields/Status_In_SAP__c.field-meta.xml
<CustomField>
    <fullName>Status_In_SAP__c</fullName>
    <description>Mirror of the Order's lifecycle status in SAP SD. Populated by SapSalesOrderService when the SAP push succeeds, kept in sync with SAP events (future ADR-???: SAP→SF event mesh subscription).</description>
    <label>Status In SAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Pushed</fullName>
                <default>true</default>
                <label>Not Yet Pushed</label>
            </value>
            <value>
                <fullName>Pushing</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Push Failed</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>