force-app/main/default/objects/Order/fields/Total_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_With_Tax__c</fullName>
    <description>TotalAmount + 19% tax.</description>
    <formula>ROUND(TotalAmount * 1.19, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>